--- a/.gitchangelog.rc
+++ b/.gitchangelog.rc
@@ -157,10 +157,10 @@ tag_filter_regexp = r'^[0-9]+\.[0-9]+(\.[0-9]+)?$'
 ## between last valid tag and HEAD if any.
 import os.path
 
-# unreleased_version_label = lambda: swrap(
-#     (["bash"] if WIN32 else []) +
-#     [os.path.join(".", "autogen.sh"), "--get-version"],
-#     shell=False)
+unreleased_version_label = lambda: swrap(
+    (["bash"] if WIN32 else []) +
+    [os.path.join(".", "autogen.sh"), "--get-version"],
+    shell=False)
 
 ## ``output_engine`` is a callable
 ##
@@ -242,6 +242,7 @@ include_merge = True
 ##        for a complete copy-pastable example.
 ##
 # publish = FileInsertIntoFirstRegexMatch(
+# publish = FileInsertAtFirstRegexMatch(
 #     "CHANGELOG.rst",
 #     r'/(?P<rev>[0-9]+\.[0-9]+(\.[0-9]+)?)\s+\([0-9]+-[0-9]{2}-[0-9]{2}\)\n--+\n/',
 #     idx=lambda m: m.start(1)
