--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 py4j==0.10.7
 pyspark==2.4.3
 tensorflow==1.13.1
+tensorflowonspark==1.4.3
 scikit-learn==0.21.1
 pandas==0.24.2
-tensorflowonspark==1.4.3
+pydoop==2.0.0
 hdfs==2.5.8
