--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ pyspark==2.4.3
 tensorflow==1.13.1
 tensorflowonspark==1.4.3
 scikit-learn==0.21.1
+numpy==1.16.3
 pandas==0.24.2
 pydoop==2.0.0
 hdfs==2.5.8
