--- a/.gitchangelog.rc
+++ b/.gitchangelog.rc
@@ -200,7 +200,8 @@ output_engine = rest_py
 ##
 ## This option tells git-log whether to include merge commits in the log.
 ## The default is to include them.
-include_merge = True
+# include_merge = True
+include_merge = False
 
 ## ``log_encoding`` is a string identifier
 ##
